# recon-silly-ation

./: .gitignore  .guix-channel  AI.a2ml  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Containerfile  Dockerfile  ECOSYSTEM.scm  LICENSE  LICENSE.txt  MAINTAINERS.md  README.adoc  README.md  RSR_COMPLIANCE.adoc  SECURITY.md  STATE.scm  codemeta.json  docker-compose.yml  flake.nix  guix.scm  justfile  package.json  rescript.json
.github/workflows/: casket-pages.yml  ci.yml  codeql.yml  rsr-antipattern.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: dc.xml
docs/: CITATIONS.adoc  IMPLEMENTATION-SUMMARY.adoc  RECONFORTH-SPEC.adoc  TPCF.adoc  doc-reconciliation-architecture.adoc
examples/: .env.example
scripts/: verify-rsr-compliance.js
src/: ArangoClient.res  CCCPCompliance.res  CLI.res  ConflictResolver.res  Deduplicator.res  EnforcementBot.res  GraphVisualizer.res  HaskellBridge.res  LLMIntegration.res  LogicEngine.res  PackShipper.res  Pipeline.res  ReconForth.res  Types.res  main.js
src/wasm/: mod.js
tests/: IntegrationTest.res  PipelineTest.res  TestRunner.res
validator/: validator-bridge.cabal
wasm-modules/: Cargo.toml
wasm-modules/src/: lib.rs
wasm-modules/src/reconforth/: builtins.rs  lexer.rs  mod.rs  types.rs  vm.rs
